--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
     "graphql": "^16.0.1",
     "graphql-tag": "^2.12.6",
     "install": "^0.13.0",
     "material-icons": "^1.10.4",
     "npm": "^8.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-jss": "^10.8.2",
     "react-markdown": "^7.1.1",
     "react-router-dom": "^6.0.2",
@@ -43,7 +42,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^26.0.15",
-    "react-scripts": "4.0.3"
+    "@types/react": "^18.3.22",
+    "@types/react-dom": "^18.3.7",
+    "@types/testing-library__react": "^10.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "react-scripts": "^5.0.1"
   }
 }
